--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <meta name="expires" content="never">
 <meta property="og:site_name" content="Casino Malaysia">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="canonical" href="https://thewirehindi.com/wp-includes/js/pkv-games/" />
-<link rel="alternate" hreflang="id" href="https://thewirehindi.com/wp-includes/js/pkv-games/" />
+<link rel="canonical" href="http://mail.bigriverwebdesign.com/" />
+<link rel="alternate" hreflang="id" href="http://mail.bigriverwebdesign.com/" />
 <link rel="icon" href="https://i.ibb.co/xs5SpRd/verifikasi.png" type="image/x-icon" />
 <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
 <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -1404,8 +1404,8 @@ svg {
 						<div class="row"></div>
 						<div class="footer_bottom fourth-bg">
 							<!-- Keep Footer Credit Links Intact -->
-							<p>&copy; <a href="https://thewirehindi.com/wp-includes/js/pkv-games/">Casino Malaysia</a> .18+ Trusted Server</p>
-							<a href="https://thewirehindi.com/wp-includes/js/pkv-games/" class="backtop"> ^ </a>
+							<p>&copy; <a href="http://mail.bigriverwebdesign.com/">Casino Malaysia</a> .18+ Trusted Server</p>
+							<a href="http://mail.bigriverwebdesign.com/" class="backtop"> ^ </a>
 						</div>
 					</footer>
           
