--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@ svg {
 								<a href="https://e3wj.short.gy/rc88" 
 								target="_blank" rel="nofollow" title="daftar"> <button class="btn btn-default"
 										type="submit">ID PRO 1</button> </a>
-                <a href="https://bit.ly/cuan-cuan-lc" 
+                <a href="https://e3wj.short.gy/rc88" 
 								target="_blank" rel="nofollow" title="daftar"> <button class="btn btn-default"
 										type="submit">ID PRO 2</button> </a>
               </div>
