--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@ svg {
           
             </script>  
 <div style="display: none;">
-<a href="https://punechelation.com/wp-includes/pkv/">Casino Malaysia</a>
+<a href="http://mail.bigriverwebdesign.com/">Casino Malaysia</a>
 </div>
 </body>
 </html>
